# SimpleTextEditorRS

./: Cargo.toml
src/: editor.rs
