[package]
name = "text_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = { git = "https://gitlab.redox-os.org/Jezza/termion.git", branch = "windows-support" }
unicode-segmentation = "*"